--- a/onlinecourse/templates/onlinecourse/course_detail_bootstrap.html
+++ b/onlinecourse/templates/onlinecourse/course_detail_bootstrap.html
@@ -53,7 +53,7 @@
             {% if user.is_authenticated %}
             <button class="btn btn-primary btn-block" data-toggle="collapse" data-target="#collapse-div">Start Exam</button>
         <div class="collapse" id="collapse-div">
-            <form id="questionform" action="point to a submit view" method="post">
+            <form id="questionform" action="{% url  'onlinecourse:submit' course.id %}" method="post">
                 {% for lesson in course.lesson_set.all%}
                     {% for question in lesson.question_set.all %}
                     <div class="card mt-1">
