--- a/onlinecourse/templates/onlinecourse/exam_result_bootstrap.html
+++ b/onlinecourse/templates/onlinecourse/exam_result_bootstrap.html
@@ -36,19 +36,20 @@
 </nav>
 
 <div class="container-fluid">
-    {% if grade > 80 %}
+    {% if score > 80 %}
     <div class="alert alert-success">
-        <b>Congratulations, {{ user.username}}!</b> You have passed the exam and completed the course with score {{ grade }}/100
+        <b>Congratulations, {{ user.username}}!</b> You have passed the exam and completed the course with score {{ score }}/100
      </div>
         {% else %}
         <div class="alert alert-danger">
-            <b>Failed</b> Sorry, {{user.username}}! You have failed the exam!
+            <b>Failed</b> Sorry, {{user.username}}! You have failed the exam! Your score was {{score}}/100.
         </div>
         <a class="btn btn-link text-danger" href="{% url 'onlinecourse:course_details' course.id %}">Re-test</a>
         {% endif %}
         <div class="card-columns-vertical mt-1">
         <h5 class="">Exam results</h5>
-        {% for  question in course.question_set.all %}
+        {% for lesson in course.lesson_set.all%}
+        {% for question in lesson.question_set.all %}
         <div class="card mt-1">
             <div class="card-header"><h5>{{ question.question_text}}</h5></div>
             {% csrf_token %}
@@ -75,6 +76,7 @@
                       {% endif %}
                     {% endif %}
                 </div>
+              {% endfor %}
               {% endfor %}
             </div>
         </div>
